...
                android:layout_weight="1"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/edittext_signupform_shortanswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="Type Answer"
                    android:maxLines="1"
                    android:singleLine="true" />
...
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:passwordToggleDrawable="@drawable/password_paintexttoggle_selector"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edittext_signupform_passwordanswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
...
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:passwordToggleDrawable="@drawable/password_paintexttoggle_selector"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edittext_signupform_passwordverifyanswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="Verify Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
...
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_signupform_next"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:drawableRight="@drawable/ic_baseline_chevron_right_24"
            android:text="Next"
            android:textColor="@color/colorSecondaryLight" />
...
