...
        />

    <item android:id="@+id/blank_page1"
        android:title="" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom"
        />

    <item
...
